# saitama-legacy

./: .dockerignore  .gitignore  .npmrc  .prettierrc  LICENSE  README.md  bun.lockb  docker-compose.yml  package.json  render.yaml  turbo.json  uno.config.ts
.changeset/: config.json
apps/exma/: .gitignore  Dockerfile  README.md  bun.lockb  next.config.js  package.json  test.ts  tsconfig.json
apps/exma/src/: config.ts  index.css  middleware.ts  types.ts
apps/exma/src/app/: layout.tsx  page.tsx
apps/exma/src/assets/: SaitamaIcon.tsx
apps/exma/src/components/: ClientOnly.tsx  ErrorMessage.tsx  ExmaModal.tsx  ProtectedRoute.tsx  TelegramClientOnly.tsx
apps/exma/src/composables/: useLocation.ts  (+1 more)
contracts/bofoi/: Anchor.toml  Cargo.toml  bun.lockb  package.json  tsconfig.json
contracts/bofoi/app/: index.ts
contracts/bofoi/migrations/: deploy.ts
contracts/bofoi/programs/bofoi/: Cargo.toml
contracts/bofoi/programs/bofoi/src/: events.rs  lib.rs
contracts/forte/: airdrop_list.json  bun.lockb  cache.json  config.json  nft.json  package.json
contracts/forte/assets/: collection.json
servers/: .gitignore
servers/bird/: package.json
servers/kamikaze/: .dockerignore  .gitignore  Dockerfile  README.md  bun.lockb  package.json
servers/kamikaze/drizzle/: 0000_thin_tarantula.sql  0000_warm_korath.sql  0001_soft_scarlet_spider.sql
servers/kamikaze/src/: config.ts  external.ts  global.d.ts  index.ts  singleton.ts
servers/kamikaze/tests/: exma.ts  mint.spec.ts  parse.test.ts  secret.spec.ts
servers/watchdog/: Dockerfile  README.md  index.ts  package.json
(+61 files in other folders)
